--- a/requirements.txt
+++ b/requirements.txt
@@ -18,14 +18,12 @@ faiss-cpu
 sentence-transformers
 langchain
 
-# --- Specify modern, compatible versions to ensure stability ---
-openai~=1.16.0
-httpx~=0.27.0
-huggingface-hub
-
-# LlamaIndex family
-llama-index~=0.10.45
-llama-index-llms-openai~=0.1.20
-llama-index-embeddings-huggingface~=0.2.0
-llama-index-agent-openai~=0.2.5
-llama-index-readers-web~=0.1.11
+# Versions are pinned for consistency.
+openai==1.99.6
+httpx==0.28.1
+huggingface-hub==0.34.4
+llama-index==0.12.52
+llama-index-llms-openai==0.4.7
+llama-index-embeddings-huggingface==0.5.5
+llama-index-agent-openai==0.4.12
+llama-index-readers-web==0.4.5
